--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,71 +3,83 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <!-- Main Menu -->
+             <!-- Main Menu -->
           <nav class="navbar navbar-default header-1" role="navigation">
-            <div class="navbar-header">
-              <a class="logo_link" href="#">
-                <img src="assets/logo.jpeg" alt="Hyderabad Cancer  Center" class="logo">
-              </a>
-
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-
-            </div>
-            <div class="mytopbar">
-              <i class="fas fa-phone"></i>
-              <span style="font-family: yu gathic light;font-weight: bold"> &nbsp;044123456789</span>
-              &nbsp;
-              <span>
-                <i class="fab fa-whatsapp"></i>
-                <span style="font-family: yu gathic light;font-weight: bold">
-                  9874561230
+              <div class="navbar-header">
+                <a class="logo_link" href="#">
+                  <img src="assets/logo.jpeg" alt="Hyderabad Cancer  Center" class="logo">
+                </a>
+  
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                  <span class="sr-only"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+  
+              </div>
+              <div class="mytopbar">
+                <i class="fas fa-phone"></i>
+                <span style="font-family: yu gathic light;font-weight: bold"> &nbsp;044123456789</span>
+                &nbsp;
+                <span>
+                  <i class="fab fa-whatsapp"></i>
+                  <span style="font-family: yu gathic light;font-weight: bold">
+                    9874561230
+                  </span>
                 </span>
-              </span>
-
-            </div>
-
-            <div class="collapse navbar-collapse navbar-ex1-collapse">
-
-              <ul id="menu-main-menu" class="nav navbar-nav navbar-left">
-
-                <li id="nav-menu-item-1" class="firstitem menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children  dropdown">
-                  <a href="#" class="menu-link">HOME</a>
-                </li>
-                <li id="nav-menu-item-2" class="firstitem menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children multi dropdown">
-                  <a href="#" class="menu-link">
-                    ABOUT US
-                  </a>
-                </li>
-                <li id="nav-menu-item-3" class="firstitem menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children multi dropdown">
-                  <a href="#" class="menu-link">
-                    CONTACT US
-                  </a>
-                </li>
-                <li id="nav-menu-item-5" class="firstitem menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children multi dropdown">
-                  <a href="#" class="menu-link">
-                    DEPARTMENTS
-                  </a>
-                 
-
-                </li>
-
-                <li id="nav-menu-item-5" class="firstitem menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children multi dropdown">
-                  <a href="#" class="menu-link">
-
-                    DIAGNOSIS
-                  </a>
-                </li>
-              </ul>
+  
+              </div>
+  
+              <div class="collapse navbar-collapse navbar-ex1-collapse">
+  
+                <ul id="menu-main-menu" class="nav navbar-nav navbar-left">
+  
+                  <li id="nav-menu-item-1" class="firstitem menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children  dropdown">
+                    <a class="menu-link" routerLink="/" routerLinkActive="active"class="menu-link">HOME</a>
+                  </li>
+                  <li id="nav-menu-item-2" class="firstitem menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children multi dropdown">
+                    <a routerLink="/About" routerLinkActive="active"class="menu-link">
+                      ABOUT US
+                    </a>
+                  </li>
+                  <li id="nav-menu-item-3" class="firstitem menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children multi dropdown">
+                    <a routerLink="/Contact" routerLinkActive="active"class="menu-link" class="menu-link">
+                      CONTACT US
+                    </a>
+                  </li>
+                  <!-- <li id="nav-menu-item-5" class="firstitem menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children multi dropdown">
+                    <a href="#" class="menu-link">
+                      DEPARTMENTS
+                    </a>
+                   
+  
+                  </li> -->
+                  <li class="dropdown">
+                      <a class="dropdown-toggle" data-toggle="dropdown" href="#">DEPARTMENTS <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="#">ONCOLOGY</a></li>
+                        <hr>
+                        <li><a href="#">GYNACOLOGY</a></li>
+                     
+                      </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">DIAGNOSIS <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                          <li><a href="#">X-RAY</a></li>
+                          <hr>
+                          <li><a href="#">CBP</a></li>
+                          <!-- <li><a href="#">Page 1-3</a></li> -->
+                        </ul>
+                      </li>
               
-            </div>
-            <!-- /.navbar-collapse -->
-
-          </nav>
+                </ul>
+                
+              </div>
+              <!-- /.navbar-collapse -->
+  
+            </nav>
           
         </div>
         <div class="appntwdgt" style="margin: 0px;
@@ -80,164 +92,5 @@
     </div>
   </header>
 </div>
-<hr>
-<div id="slide">
-  <section class="slides">
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner">
-        <div class="item active">
-          <img src="assets/nabh.jpg" alt="Hospital">
-        </div>
-
-        <div class="item">
-          <img src="assets/slide1.jpg" alt="Chicago">
-        </div>
-
-        <div class="item">
-          <img src="assets/slide4.jpg" alt="New york">
-
-        </div>
-      </div>
-
-      <!-- Left and right controls -->
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span class="sr-only">Next</span>
-      </a>
-
-    </div>
-  </section>
-
-</div>
-<hr>
-<div class="sticky-popup sticky-popup-right open_sticky_popup_right" style="right: -317px; visibility: visible;">
-  <div class="popup-wrap ieundefined">
-    <div class="popup-header">
-      <span class="popup-title">
-        &nbsp;A
-        <br> &nbsp;P
-        <br> &nbsp;P
-        <br> &nbsp;O
-        <br> &nbsp;I
-        <br> &nbsp;N
-        <br> &nbsp;T
-        <br> &nbsp;M
-        <br> &nbsp;E
-        <br> &nbsp;N
-        <br> &nbsp;T
-
-      </span>
-    </div>
-  </div>
-</div>
-<div class="icon-bar">
-  <a href="#" class="facebook">
-    <i class="fa fa-facebook fa-facebook-square"></i>
-  </a>
-  <a href="#" class="twitter">
-    <i class="fa fa-twitter"></i>
-  </a>
-  <a href="#" class="instagram">
-    <i class="fa fa-instagram fa-5x"></i>
-  </a>
-  <!-- <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a> -->
-  <a href="#" class="youtube">
-    <i class="fa fa-youtube"></i>
-  </a>
-</div>
-
-<section class="content">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12" style="margin-top: 75px;">
-        <div class="item1 col-md-2">
-          <div class="dep-image">
-            <a href="#" target="_blank" rel="noopener">
-              <i class="fa fa-images"></i>
-            </a>
-          </div>
-          <div class="dep-text">
-            <h6 class="car-text" style="font-weight: 600; height: 35px;">
-              <a href="#" target="_blank" rel="noopener">Gallery</a>
-            </h6>
-          </div>
-        </div>
-        <div class="item2 col-md-2">
-          <div class="dep-image">
-            <a href="#" target="_blank" rel="noopener">
-              <i class="fas fa-user-md"></i>
-            </a>
-          </div>
-          <div class="dep-text">
-            <h6 class="car-text" style="font-weight: 600; height: 35px;">
-              <a href="#" target="_blank" rel="noopener">Doctors</a>
-            </h6>
-          </div>
-        </div>
-        <div class="item3 col-md-2">
-          <div class="dep-image">
-            <a href="#" target="_blank" rel="noopener">
-              <i class="fa fa-images"></i>
-            </a>
-          </div>
-          <div class="dep-text">
-            <h6 class="car-text" style="font-weight: 600; height: 35px;">
-              <a href="#" target="_blank" rel="noopener">Patient Speaks</a>
-            </h6>
-          </div>
-        </div>
-        <div class="item4 col-md-2">
-          <div class="dep-image">
-            <a href="#" target="_blank" rel="noopener">
-              <!-- <img src="assets/balance.png" alt="hospital">  -->
-              <i class="fa fa-images"></i>
-            </a>
-          </div>
-          <div class="dep-text">
-            <h6 class="car-text" style="font-weight: 600; height: 35px;">
-              <a href="#" target="_blank" rel="noopener">Myth Buster</a>
-            </h6>
-          </div>
-        </div>
-        <div class="item5 col-md-2">
-          <div class="dep-image">
-            <a href="#" target="_blank" rel="noopener">
-              <i class="fa fa-images"></i>
-            </a>
-          </div>
-          <div class="dep-text">
-            <h6 class="car-text" style="font-weight: 600; height: 35px;">
-              <a href="#" target="_blank" rel="noopener">Appointment</a>
-            </h6>
-          </div>
-        </div>
-        <div class="item6 col-md-2">
-          <div class="dep-image">
-            <a href="#" target="_blank" rel="noopener">
-              <i class="fa fa-images"></i>
-            </a>
-          </div>
-          <div class="dep-text">
-            <h6 class="car-text" style="font-weight: 600; height: 35px;">
-              <a href="#" target="_blank" rel="noopener">Events</a>
-            </h6>
-          </div>
-        </div>
-      </div>
-
-
-    </div>
-  </div>
-</section>
+<router-outlet></router-outlet>
+<!-- <app-home></app-home> -->
