--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
                 </a>
   
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                  <span class="sr-only"></span>
+                  <!-- <span class="sr-only"></span> -->
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
@@ -67,9 +67,9 @@
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">DIAGNOSIS <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="#">X-RAY</a></li>
+                          <li><a >X-RAY</a></li>
                           <hr>
-                          <li><a href="#">CBP</a></li>
+                          <li><a>CBP</a></li>
                           <!-- <li><a href="#">Page 1-3</a></li> -->
                         </ul>
                       </li>
@@ -92,5 +92,100 @@
     </div>
   </header>
 </div>
+<div class="sticky-popup sticky-popup-left open_sticky_popup_left" style=" visibility: visible;">
+    <div class="popup-wrap ieundefined">
+      <div class="popup-header" data-toggle="modal" data-target="#myModal">
+          <div class="icon-bars">
+              <a href="#" class="facebook">
+                <i class="fa fa-facebook fa-facebook-square"></i>
+              </a>
+              <a href="#" class="twitter">
+                <i class="fa fa-twitter"></i>
+              </a>
+              <a href="#" class="instagram">
+                <i class="fa fa-instagram fa-5x"></i>
+              </a>
+              <!-- <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a> -->
+              <a href="#" class="youtube">
+                <i class="fa fa-youtube"></i>
+              </a>
+            </div>
+      </div>
+    </div>
+</div>
+
+  <div class="sticky-popup sticky-popup-right open_sticky_popup_right" style="right: -317px; visibility: visible;">
+      <div class="popup-wrap ieundefined">
+        <div class="popup-header" data-toggle="modal" data-target="#myModal">
+          <span class="popup-title" >
+            &nbsp;A
+            <br> &nbsp;P
+            <br> &nbsp;P
+            <br> &nbsp;O
+            <br> &nbsp;I
+            <br> &nbsp;N
+            <br> &nbsp;T
+            <br> &nbsp;M
+            <br> &nbsp;E
+            <br> &nbsp;N
+            <br> &nbsp;T
+    
+          </span>
+        </div>
+          <!-- Modal -->
+      <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+        
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title" >Book Your Appointment</h4>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group row">
+                      <label for="inputEmail3" class="col-sm-2 col-form-label">Name</label>
+                      <div class="col-sm-10">
+                        <input type="email" class="form-control" id="inputEmail3" placeholder="Name">
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                      <label for="inputPassword3" class="col-sm-2 col-form-label">Mobile</label>
+                      <div class="col-sm-10">
+                        <input type="number" class="form-control" id="inputPassword3" placeholder="Mobile">
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="inputPassword3" class="col-sm-2 col-form-label">Email</label>
+                        <div class="col-sm-10">
+                          <input type="email" class="form-control" id="inputPassword3" placeholder="Email">
+                        </div>
+                      </div>
+                      <div class="form-group row">
+                          <label for="inputPassword3" class="col-sm-2 col-form-label">DOB</label>
+                          <div class="col-sm-10">
+                            <input type="date" class="form-control" id="inputPassword3" placeholder="DOB">
+                          </div>
+                        </div>
+                       
+                
+                    <div class="form-group row">
+                      <div class="col-sm-10">
+                        <button type="submit" class="sample btn btn-primary" >Submit</button>
+                      </div>
+                    </div>
+                  </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+      </div>
+    </div>
+    
 <router-outlet></router-outlet>
 <!-- <app-home></app-home> -->
