--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<hr>
+
 
 <div id="slide">
   <section class="slides">
@@ -13,11 +13,11 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
         <div class="item active">
-          <img src="assets/nabh.jpg" alt="Hospital">
+          <img src="assets/sl1.jpg" alt="Hospital">
         </div>
 
         <div class="item">
-          <img src="assets/slide1.jpg" alt="Chicago">
+          <img src="assets/sl.jpg" alt="Chicago">
         </div>
 
         <div class="item">
@@ -40,94 +40,8 @@
   </section>
 
 </div>
-<hr>
-<div class="sticky-popup sticky-popup-right open_sticky_popup_right" style="right: -317px; visibility: visible;">
-  <div class="popup-wrap ieundefined">
-    <div class="popup-header" data-toggle="modal" data-target="#myModal">
-      <span class="popup-title" >
-        &nbsp;A
-        <br> &nbsp;P
-        <br> &nbsp;P
-        <br> &nbsp;O
-        <br> &nbsp;I
-        <br> &nbsp;N
-        <br> &nbsp;T
-        <br> &nbsp;M
-        <br> &nbsp;E
-        <br> &nbsp;N
-        <br> &nbsp;T
 
-      </span>
-    </div>
-      <!-- Modal -->
-  <div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog">
-    
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title" >Book Your Appointment</h4>
-        </div>
-        <div class="modal-body">
-            <form>
-                <div class="form-group row">
-                  <label for="inputEmail3" class="col-sm-2 col-form-label">Name</label>
-                  <div class="col-sm-10">
-                    <input type="email" class="form-control" id="inputEmail3" placeholder="Name">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label for="inputPassword3" class="col-sm-2 col-form-label">Mobile</label>
-                  <div class="col-sm-10">
-                    <input type="number" class="form-control" id="inputPassword3" placeholder="Mobile">
-                  </div>
-                </div>
-                <div class="form-group row">
-                    <label for="inputPassword3" class="col-sm-2 col-form-label">Email</label>
-                    <div class="col-sm-10">
-                      <input type="email" class="form-control" id="inputPassword3" placeholder="Email">
-                    </div>
-                  </div>
-                  <div class="form-group row">
-                      <label for="inputPassword3" class="col-sm-2 col-form-label">DOB</label>
-                      <div class="col-sm-10">
-                        <input type="date" class="form-control" id="inputPassword3" placeholder="DOB">
-                      </div>
-                    </div>
-                   
-            
-                <div class="form-group row">
-                  <div class="col-sm-10">
-                    <button type="submit" class="sample btn btn-primary">Submit</button>
-                  </div>
-                </div>
-              </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-      
-    </div>
-  </div>
-  </div>
-</div>
-<div class="icon-bar">
-  <a href="#" class="facebook">
-    <i class="fa fa-facebook fa-facebook-square"></i>
-  </a>
-  <a href="#" class="twitter">
-    <i class="fa fa-twitter"></i>
-  </a>
-  <a href="#" class="instagram">
-    <i class="fa fa-instagram fa-5x"></i>
-  </a>
-  <!-- <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a> -->
-  <a href="#" class="youtube">
-    <i class="fa fa-youtube"></i>
-  </a>
-</div>
+
 
 <section class="content">
   <div class="container">
@@ -139,7 +53,8 @@
         <div class="item1 ">
             <div class="dep-image">
               <a href="#" target="_blank" rel="noopener">
-                <i class="fa fa-images"></i>
+                <!-- <i class="fa fa-images"></i> -->
+                <img src="assets/picture.png" alt="hospital"> 
               </a>
             </div>
             <div class="dep-text">
@@ -153,7 +68,8 @@
         <div class="item2 ">
             <div class="dep-image">
               <a href="#" target="_blank" rel="noopener">
-                <i class="fas fa-user-md"></i>
+                <!-- <i class="fas fa-user-md"></i> -->
+                <img src="assets/doctor.png" alt="hospital"> 
               </a>
             </div>
             <div class="dep-text">
@@ -167,7 +83,7 @@
         <div class="item5 ">
             <div class="dep-image">
               <a href="#" target="_blank" rel="noopener">
-                <i class="fa fa-images"></i>
+                  <img src="assets/appointment.png" alt="hospital"> 
               </a>
             </div>
             <div class="dep-text">
@@ -181,7 +97,7 @@
         <div class="item3 ">
             <div class="dep-image">
               <a href="#" target="_blank" rel="noopener">
-                <i class="fa fa-images"></i>
+                  <img src="assets/conversation.png" alt="hospital"> 
               </a>
             </div>
             <div class="dep-text">
@@ -210,8 +126,8 @@
         <div class="item4 ">
             <div class="dep-image">
               <a href="#" target="_blank" rel="noopener">
-                <!-- <img src="assets/balance.png" alt="hospital">  -->
-                <i class="fa fa-images"></i>
+                <img src="assets/calendar.png" alt="hospital"> 
+                <!-- <i class="fa fa-images"></i> -->
               </a>
             </div>
             <div class="dep-text">
