--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -94,7 +94,7 @@
 </div>
 <div class="sticky-popup sticky-popup-left open_sticky_popup_left" style=" visibility: visible;">
     <div class="popup-wrap ieundefined">
-      <div class="popup-header" data-toggle="modal" data-target="#myModal">
+      <div class="popup-header" >
           <div class="icon-bars">
               <a href="#" class="facebook">
                 <i class="fa fa-facebook fa-facebook-square"></i>
