--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -79,7 +79,7 @@
             </div>
           </div>
     </div>
-    <div class="item">
+    <!-- <div class="item">
         <div class="item5 ">
             <div class="dep-image">
               <a href="#" target="_blank" rel="noopener">
@@ -92,7 +92,7 @@
               </h6>
             </div>
           </div>
-    </div>
+    </div> -->
     <div class="item">
         <div class="item3 ">
             <div class="dep-image">
