--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,25 +1,24 @@
 
-
-
+  <hr>
 <div class="container">
-    <div class="title">
-        <h2>HCC</h2>
-        <br>
-    </div>
-    <section>
-        <div class="grid-flex">
-          <div class="col col-image" style="background-image: url(assets/h1.jpg);">
-          </div>
-          <div class="col col-text">
-            <div class="Aligner-item">
-                <p>
-                  Lorems ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
-              </p>
+      
+        <div >
+                <h2>About HCC</h2>
+                <br>
             </div>
-          </div>
+    <div class="row featurette">
+        <div class="col-md-5 order-md-2">
+                <img class="featurette-image img-fluid mx-auto"  alt="500x500" src="assets/abt.jpg" data-holder-rendered="true" style="width: 500px; height: 330px;">
+                
         </div>
-        <br>
-       
-    </section>
+        <div class="col-md-7 order-md-1 content">
+                <p>
+                        Lorems ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
+                        Lorems ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
+                        
+                    </p>
+        </div>
+    </div>
 </div>
+
 
