--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,16 +12,18 @@
 
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
-        <div class="item active">
-          <img src="assets/sl1.jpg" alt="Hospital">
+        <div class="item  active" >
+          <img src="assets/c1.jpg" alt="Hospital" style="height:45rem">
+          
+        </div>
+      
+
+        <div class="item">
+          <img src="assets/c2.jpg" alt="Chicago" style="height:45rem">
         </div>
 
         <div class="item">
-          <img src="assets/sl.jpg" alt="Chicago">
-        </div>
-
-        <div class="item">
-          <img src="assets/slide4.jpg" alt="New york">
+          <img src="assets/c3.jpg" alt="New york" style="height:45rem">
 
         </div>
       </div>
@@ -52,29 +54,30 @@
     <div class="item">
         <div class="item1 ">
             <div class="dep-image">
-              <a href="#" target="_blank" rel="noopener">
+              <a  rel="noopener">
                 <!-- <i class="fa fa-images"></i> -->
                 <img src="assets/picture.png" alt="hospital"> 
               </a>
             </div>
             <div class="dep-text">
                 <h6 class="car-text" style="font-weight: 600; height: 35px;">
-                  <a href="#" target="_blank" rel="noopener">Gallery</a>
+                  <a  rel="noopener">Gallery</a>
                 </h6>
               </div>
     </div>
     </div>
     <div class="item">
         <div class="item2 ">
-            <div class="dep-image">
-              <a href="#" target="_blank" rel="noopener">
+            <div class="dep-image ">
+              <a  rel="noopener">
                 <!-- <i class="fas fa-user-md"></i> -->
                 <img src="assets/doctor.png" alt="hospital"> 
               </a>
+              
             </div>
             <div class="dep-text">
               <h6 class="car-text" style="font-weight: 600; height: 35px;">
-                <a href="#" target="_blank" rel="noopener">Doctors</a>
+                <a  rel="noopener">Doctors</a>
               </h6>
             </div>
           </div>
@@ -93,18 +96,22 @@
             </div>
           </div>
     </div> -->
-    <div class="item">
+      <div class="item">
         <div class="item3 ">
-            <div class="dep-image">
-              <a href="#" target="_blank" rel="noopener">
-                  <img src="assets/conversation.png" alt="hospital"> 
+            <div class="image">
+              <a  href="#" target="_blank" rel="noopener">
+                  <img src="assets/conversation.png" style="width: 75%" alt="hospital"> 
+                  <!-- <div class="overlay">The content to be displayed on :hover</div> -->
               </a>
+             
+              
             </div>
             <div class="dep-text">
               <h6 class="car-text" style="font-weight: 600; height: 35px;">
                 <a href="#" target="_blank" rel="noopener">Patient Speaks</a>
               </h6>
             </div>
+         
           </div>
     </div>
     <div class="item">
@@ -123,16 +130,16 @@
           </div>
     </div>
     <div class="item">
-        <div class="item4 ">
+        <div class="item5 ">
             <div class="dep-image">
-              <a href="#" target="_blank" rel="noopener">
+              <a  rel="noopener">
                 <img src="assets/calendar.png" alt="hospital"> 
                 <!-- <i class="fa fa-images"></i> -->
               </a>
             </div>
             <div class="dep-text">
               <h6 class="car-text" style="font-weight: 600; height: 35px;">
-                <a href="#" target="_blank" rel="noopener">Events</a>
+                <a  rel="noopener">Events</a>
               </h6>
             </div>
           </div>
