--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,34 @@
+
+.item2:hover .child
+{
+    display: none;
+    /* visibility: hidden; */
+   
+
+}
+
+.child .tooltiptext{
+    position: absolute;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+ 
+    left: 82%;
+    margin-left: -154px;
+    margin-top: -163px;
+}
+.child
+{
+    display: none;
+    
+}
 .slide
 {
     border-top: 1px solid #1e205b;
@@ -11,6 +42,10 @@
 {
     color:#1e205b;
 }
+}
+.carousel-inner img {
+    width: 100%;
+    height: 100%;
 }
 /* hr{
     margin-bottom: 0px;
@@ -41,3 +76,34 @@
     font-size: 38px;
     color: #f5821f;
 }
+.image {
+    position:relative;
+    display:inline-block;
+}
+.overlay {
+    display:none;
+}
+.image:hover .overlay {
+    width:100%;
+    height:100%;
+    background:rgba(0,0,0,.5);
+    position:absolute;
+    top:0;
+    left:0;
+    display:inline-block;
+    -webkit-box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    box-sizing:border-box;
+
+    position: absolute;
+    background-color: #ff0000;
+    width: 250px;
+    height: 250px;
+    left: 200px;
+    top: 100px;
+
+    /* All other styling - see example */
+}
+    img {
+        vertical-align:top; /* Default is baseline, this fixes a common alignment issue */
+    }
